--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "proy_devops",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "jest": "^29.7.0",
-    "jsdom": "^26.1.0"
+    "jest": "^29.0.0",
+    "jsdom": "^21.1.0",
+    "@testing-library/dom": "^9.0.0"
   }
 }
