--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@testing-library/dom": "^9.3.4",
-    "jest": "^29.7.0",
-    "jsdom": "^21.1.2"
+    "@testing-library/dom": "^9.0.0",
+    "jest": "^29.0.0",
+    "jsdom": "^21.1.0",
+    "jest-environment-jsdom": "^29.0.0"
   }
 }
